# kwik

./: .gitignore  .gitmodules  BUGS.md  Base.cmake  CMakeLists.txt  README.md
compiler/: CMakeLists.txt
compiler/include/: assets.h  disasm.h  iff.h  lift.h
compiler/source/: assets.cpp  disasm.cpp  iff.cpp  lift.cpp  main.cpp
docs/: kwik vita guide.txt  kwik windows build guide.txt
runtime/: CMakeLists.txt
runtime/include/: engine_internal.h  gml_runtime.h  render.h
runtime/source/: assets_rt.cpp  audio.cpp  builtins.cpp  builtins_ch2.cpp  builtins_ch5.cpp  builtins_core.cpp  builtins_data.cpp  builtins_draw.cpp  builtins_misc.cpp  game.cpp  value.cpp
runtime/source/backends/: opengl.cpp  sdl2.cpp  vitagl.cpp
